# django-ecommerce

./: .gitignore  README.md  home.html  pyproject.toml
basket/: basket.py  urls.py  views.py
config/gunicorn/: dev.py
core/: settings.py
static/css/: style.css
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py
store/tests/: test_models.py  test_views.py
templates/: base.html
templates/store/: about.html  base.html  home.html  products.html
templates/store/basket/: summary.html
templates/store/products/: category.html  detail.html  single.html
