[tool.poetry]
name = "django_ecommerce"
version = "0.1.0"
description = ""
authors = ["SleepyMarauder <jelted@hotmail.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
Pillow = "^8.3.1"
coverage = "^5.5"
flake8 = "^3.9.2"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
